# fabricaGPTER_backEnd

./: .gitignore  .pdm-python  README.md  db.sqlite3  pyproject.toml  requirements.txt
app/: settings.py  urls.py
config/: settings.py  urls.py
core/: admin.py  urls_auth.py
core/migrations/: 0001_initial.py  0002_exame.py  0002_medico_paciente_medico.py  0002_remove_clinica_cidade_remove_paciente_clinica_and_more.py  0003_admin.py  0003_alter_administrador_usuario_exame.py  0003_exame_descricao_exame_paciente.py  0003_paciente_mao_dominante_alter_administrador_usuario.py  0004_remove_profissional_matricula.py  0004_rename_exame_teste.py  0005_pacient.py  0005_remove_administrador_cpf_and_more.py  0005_teste_detalhes_alter_teste_data_alter_teste_forca_and_more.py  0006_alter_usuariobase_cpf.py  0006_rename_pacient_patient.py  0006_rename_usuario_teste_paciente.py  0007_alter_patient_cpf.py  0007_alter_teste_paciente.py  0007_paciente_usuario.py  0008_alter_paciente_usuario.py  0008_alter_teste_paciente.py  0008_handgrip.py  0009_administrador_usuario_profissional_usuario.py  0010_alter_administrador_usuario_and_more.py  0011_profissional_paciente.py  0012_remove_profissional_paciente_profissionalpaciente_and_more.py  0013_alter_profissionalpaciente_options.py  0014_remove_profissional_data_nascimento.py  0015_rename_paciente_profissional_pacientes.py  0016_alter_profissionalpaciente_data_atendimento.py  0017_alter_profissionalpaciente_data_atendimento.py  0018_paciente_perfil.py  0019_merge_0008_alter_teste_paciente_0018_paciente_perfil.py  0020_remove_usuariobase_senha.py
core/models/: __init__.py  admin.py  cidade.py  clinica.py  estado.py  exame.py  funcionario.py  handGrip.py  medico.py  models.py  paciente.py  patient.py  profissional.py  teste.py  user.py
core/permissions/: medico.py  paciente.py  permissions.py
core/serializers/: __init__.py  admin.py  cidade.py  clinica.py  estado.py  exame.py  handGrip.py  medico.py  paciente.py  patient.py  profissional.py  serializers.py  teste.py  user.py
core/views/: __init__.py  admin.py  auth.py  cidade.py  clinica.py  estado.py  exame.py  handGrip.py  medico.py  paciente.py  patient.py  profissional.py  teste.py  user.py  views.py
